Missing values and duplicates

--- a/What Price for Wine.ipynb
+++ b/What Price for Wine.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1784b430",
+   "id": "e9513c35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "41fbef9c",
+   "id": "aa2c2e4d",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8321c3f1",
+   "id": "c02a4e9a",
    "metadata": {},
    "outputs": [
     {
@@ -64,26 +64,26 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1123604 entries, 0 to 1123603\n",
+      "RangeIndex: 280901 entries, 0 to 280900\n",
       "Data columns (total 14 columns):\n",
-      " #   Column                 Non-Null Count    Dtype  \n",
-      "---  ------                 --------------    -----  \n",
-      " 0   Unnamed: 0             1123604 non-null  int64  \n",
-      " 1   country                1123332 non-null  object \n",
-      " 2   description            1123604 non-null  object \n",
-      " 3   designation            790804 non-null   object \n",
-      " 4   points                 1123604 non-null  int64  \n",
-      " 5   price                  1032840 non-null  float64\n",
-      " 6   province               1123332 non-null  object \n",
-      " 7   region_1               938376 non-null   object \n",
-      " 8   region_2               445856 non-null   object \n",
-      " 9   taster_name            414908 non-null   object \n",
-      " 10  taster_twitter_handle  395032 non-null   object \n",
-      " 11  title                  519884 non-null   object \n",
-      " 12  variety                1123600 non-null  object \n",
-      " 13  winery                 1123604 non-null  object \n",
+      " #   Column                 Non-Null Count   Dtype  \n",
+      "---  ------                 --------------   -----  \n",
+      " 0   Unnamed: 0             280901 non-null  int64  \n",
+      " 1   country                280833 non-null  object \n",
+      " 2   description            280901 non-null  object \n",
+      " 3   designation            197701 non-null  object \n",
+      " 4   points                 280901 non-null  int64  \n",
+      " 5   price                  258210 non-null  float64\n",
+      " 6   province               280833 non-null  object \n",
+      " 7   region_1               234594 non-null  object \n",
+      " 8   region_2               111464 non-null  object \n",
+      " 9   taster_name            103727 non-null  object \n",
+      " 10  taster_twitter_handle  98758 non-null   object \n",
+      " 11  title                  129971 non-null  object \n",
+      " 12  variety                280900 non-null  object \n",
+      " 13  winery                 280901 non-null  object \n",
       "dtypes: float64(1), int64(2), object(11)\n",
-      "memory usage: 120.0+ MB\n"
+      "memory usage: 30.0+ MB\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8b9fb696",
+   "id": "2278e6c0",
    "metadata": {},
    "outputs": [
     {
@@ -270,6 +270,189 @@
    "source": [
     "#Call the head method on df to print the first several rows of the data\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5d279c9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>description</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>points</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>winery</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>variety</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <td>68</td>\n",
+       "      <td>0.024208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>province</th>\n",
+       "      <td>68</td>\n",
+       "      <td>0.024208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>price</th>\n",
+       "      <td>22691</td>\n",
+       "      <td>8.077935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region_1</th>\n",
+       "      <td>46307</td>\n",
+       "      <td>16.485167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>designation</th>\n",
+       "      <td>83200</td>\n",
+       "      <td>29.618976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <td>150930</td>\n",
+       "      <td>53.730674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region_2</th>\n",
+       "      <td>169437</td>\n",
+       "      <td>60.319116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>taster_name</th>\n",
+       "      <td>177174</td>\n",
+       "      <td>63.073467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>taster_twitter_handle</th>\n",
+       "      <td>182143</td>\n",
+       "      <td>64.842418</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        count          %\n",
+       "Unnamed: 0                  0   0.000000\n",
+       "description                 0   0.000000\n",
+       "points                      0   0.000000\n",
+       "winery                      0   0.000000\n",
+       "variety                     1   0.000356\n",
+       "country                    68   0.024208\n",
+       "province                   68   0.024208\n",
+       "price                   22691   8.077935\n",
+       "region_1                46307  16.485167\n",
+       "designation             83200  29.618976\n",
+       "title                  150930  53.730674\n",
+       "region_2               169437  60.319116\n",
+       "taster_name            177174  63.073467\n",
+       "taster_twitter_handle  182143  64.842418"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Count (using `.sum()`) the number of missing values (`.isnull()`) in each column of \n",
+    "#df as well as the percentages (using `.mean()` instead of `.sum()`).\n",
+    "#Order them (increasing or decreasing) using sort_values\n",
+    "#Call `pd.concat` to present these in a single table (DataFrame) with the helpful column names 'count' and '%'\n",
+    "missing = pd.concat([df.isnull().sum(), 100 * df.isnull().mean()], axis=1)\n",
+    "missing.columns=['count', '%']\n",
+    "missing.sort_values(by='count')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64495dee",
+   "metadata": {},
+   "source": [
+    "There are a number of columns here that are missing a significant amount (> 50%) of data, specifically the title (which is the name and vintage of the wine), region_2 (a secondary designetion of the region where the wine was produced), taster_name (the persone who did the review) and taster_twitter_handle. The designation is also missing nearly 30% of its values, and region_1 is missing more than 16%. The price column, which is critical to answering the business question, is missing roughly 8% of its data. A determination will need to be made, in line with the business problem, if these columns can or should be dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "abe5ac77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A little bit funky and unsettled when you pop the screwcap, but soon it finds its floral, blueberry base. Remains superficial and sweet in the mouth, with candied flavors, vanilla and mild oak. Highly regular; could use more concentration and density.    7\n",
+       "A dusty, cigar-smoke character on the nose of this blend of 52% Syrah and 48% Cabernet Sauvignon spices up aromas of strawberry fruit and rotting roses. The palate combines complex cranberry fruits with Kalamata olive, thyme and pencil lead.              6\n",
+       "This is very light, in both flavor and body. The aromas are earthy, with a faint suggestion of blackberries, and the mouthfeel is thin. These aren't terrible flaws, but the wine just lacks substance.                                                        6\n",
+       "92-94 Barrel sample. A rounded wine, its tannins submerged into the ripe fruits. It feels soft, and there is just a bite of alcohol. The structure is soft, generous, opulent.                                                                                 6\n",
+       "Altrovino is a 50-50 blend of Merlot and Cabernet Franc that opens with intense aromas of black fruit, spice, tobacco and smooth black chocolate. In the mouth, this wine offers richness and a silky, long finish.                                            6\n",
+       "Name: description, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Let's see if all the entries are unique or if there might be duplicates. We'll use the description \n",
+    "#label to make that determiniation.\n",
+    "df['description'].value_counts().head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4452ccc0",
+   "metadata": {},
+   "source": [
+    "It appears that there are many duplicate rows to contend with."
    ]
   }
  ],
