Some price stats added.

--- a/What Price for Wine.ipynb
+++ b/What Price for Wine.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e9513c35",
+   "id": "976c0725",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aa2c2e4d",
+   "id": "c069c6d4",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c02a4e9a",
+   "id": "befa8d4f",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2278e6c0",
+   "id": "7a01cbf7",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5d279c9a",
+   "id": "59c4a45f",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64495dee",
+   "id": "49b9ee6a",
    "metadata": {},
    "source": [
     "There are a number of columns here that are missing a significant amount (> 50%) of data, specifically the title (which is the name and vintage of the wine), region_2 (a secondary designetion of the region where the wine was produced), taster_name (the persone who did the review) and taster_twitter_handle. The designation is also missing nearly 30% of its values, and region_1 is missing more than 16%. The price column, which is critical to answering the business question, is missing roughly 8% of its data. A determination will need to be made, in line with the business problem, if these columns can or should be dropped."
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "abe5ac77",
+   "id": "4355747d",
    "metadata": {},
    "outputs": [
     {
@@ -449,10 +449,146 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4452ccc0",
+   "id": "417bfad5",
    "metadata": {},
    "source": [
     "It appears that there are many duplicate rows to contend with."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d1ec0b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.0, A dusty, cigar-smoke character on the nose of this blend of 52% Syrah and 48% Cabernet Sauvignon spices up aromas of strawberry fruit and rotting roses. The palate combines complex cranberry fruits with Kalamata olive, thyme and pencil lead.                                                                                                                       6\n",
+       "nan, A fine and impressively complex wine, rich, packed with sultanas and dark chocolate. Very firm, this is worth aging but drinkable now.                                                                                                                                                                                                                                   6\n",
+       "70.0, Possibly just in a sullen phase, this reserve bottling from Craggy's home vineyard is dominated for the moment by smoke and cedar on the nose, and while there is some cherry fruit apparent in the mouth, it doesn't appear to be fully expressing itself. The impression is of a wine that's tightly coiled and may yet improve with another year or two of aging.    6\n",
+       "nan, Made from organically grown grapes, this is a new wine from Barton & Guestier, a fresh, very herbaceous Sauvignon Blanc. It is bright with pear and green fruits to go with a big twist of lemon. Screwcap.                                                                                                                                                              6\n",
+       "nan, With some weight behind the firm tannins, this is beginning to develop into a dense and powerful wine. It has black plum and berry fruits and a layer of fresher strawberry juice. Throughout there are dry tannins to hold the structure together.                                                                                                                      6\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Are there still duplicates if we take the price column into account?\n",
+    "df1 =  df.astype({'price':'str'})\n",
+    "(df1['price'] + ', ' + df['description']).value_counts().head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "287dda35",
+   "metadata": {},
+   "source": [
+    "Yes, still many duplicates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "faab31df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pinot Noir                  27563\n",
+       "Chardonnay                  26235\n",
+       "Cabernet Sauvignon          22272\n",
+       "Red Blend                   19008\n",
+       "Bordeaux-style Red Blend    14262\n",
+       "                            ...  \n",
+       "Kotsifali                       1\n",
+       "Petit Courbu                    1\n",
+       "Misket                          1\n",
+       "Babosa Negro                    1\n",
+       "Carnelian                       1\n",
+       "Name: variety, Length: 756, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Because the varietal determines if we are talking about red, white, or dessert wines we need to see \n",
+    "#the breakdown of varieties.\n",
+    "df['variety'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c75418b7",
+   "metadata": {},
+   "source": [
+    "The data looks to be overwhelmingly red varietals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fcd57e6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "756"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#How many different varietals are we actually dealing with?\n",
+    "df['variety'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "85285765",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    258210.000000\n",
+      "mean         34.177162\n",
+      "std          38.611708\n",
+      "min           4.000000\n",
+      "25%          16.000000\n",
+      "50%          25.000000\n",
+      "75%          40.000000\n",
+      "max        3300.000000\n",
+      "Name: price, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#What about the price data? Let's look at the statistics around that column.\n",
+    "price_stats = df['price'].describe()\n",
+    "print(price_stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6b30c41",
+   "metadata": {},
+   "source": [
+    "It apprears there is a large variation in price, from a minimum of $4 to a maximum of $3300. It might also be worth noting that the mean is closer to the 75"
    ]
   }
  ],
